<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_gradient_list"
    android:paddingBottom="60dp"
    tools:context=".MainActivity"
    android:id="@+id/root_layout_photo">


    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/geniafont"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/adViewP" />
<androidx.constraintlayout.widget.ConstraintLayout
    android:visibility="visible"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="314dp"
        android:layout_height="559dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/adViewP"
        app:srcCompat="@drawable/body2" />


        android:layout_width="433dp"
        android:layout_height="481dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        tools:layout_editor_absoluteX="-7dp">

    <Button
        android:id="@+id/b_head"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="52dp"
        android:background="@color/colorBarra"
        android:gravity="center"
        android:text="@string/head"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />


    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <Button
        android:id="@+id/b_l_shoulder"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/colorBarra"
        android:text="@string/l_shoulder"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/b_head" />

    <Button
        android:id="@+id/b_r_shoulder"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="64dp"
        android:background="@color/colorBarra"
        android:elegantTextHeight="true"
        android:text="@string/r_shoulder"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/b_l_arm"
        app:layout_constraintTop_toBottomOf="@+id/b_head" />

    <Button
        android:id="@+id/b_r_arm"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_marginTop="36dp"
        android:background="@color/colorBarra"
        android:text="@string/r_arm"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/b_l_shoulder" />


    <Button
        android:id="@+id/b_l_arm"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorBarra"
        android:text="@string/l_arm"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/b_r_shoulder" />

    <Button
        android:id="@+id/b_r_hand"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_marginTop="72dp"
        android:background="@color/colorBarra"
        android:text="@string/r_hand"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/b_r_arm" />

    <Button
        android:id="@+id/b_left_hand"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_marginTop="72dp"
        android:background="@color/colorBarra"
        android:text="@string/l_hand"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/b_l_arm" />

    <Button
        android:id="@+id/b_r_leg"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/colorBarra"
        android:text="@string/r_leg"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/b_r_hand" />

    <Button
        android:id="@+id/b_l_leg"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorBarra"
        android:text="@string/l_leg"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/b_left_hand"
        app:layout_constraintTop_toBottomOf="@+id/b_left_hand" />

    <Button
        android:id="@+id/b_r_foot"
        android:layout_width="92dp"
        android:layout_height="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/colorBarra"
        android:text="@string/r_foot"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/b_r_leg" />

    <Button
        android:id="@+id/b_l_foot"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:background="@color/colorBarra"
        android:text="@string/l_foot"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/b_l_leg" />

    <Button
        android:id="@+id/b_zonex"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorBarra"
        android:text="@string/hip"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/b_l_arm" />

    <Button
        android:id="@+id/b_chest"
        android:layout_width="70dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorBarra"
        android:text="@string/chest"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/b_zonex"
        app:layout_constraintEnd_toEndOf="@+id/b_r_arm"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/b_head"
        app:layout_constraintVertical_bias="0.726" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>